--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 	text-align: center;
 	font-family: 'Amatic SC', cursive;
 	font-size: 50px;
+	text-decoration: none;
 }
+
 .ul {
 	margin-left:500px;
 }
@@ -49,6 +51,11 @@
 	width: 200px;
 	height: 133.328px;
 }
+.img-detail {
+	width: 700px;
+	height: 466.656px;
+}
+
 .text3 {
 	font-size: 15px;
 	width: 200px;
@@ -62,5 +69,60 @@
 .footer {
 	height: 56px;
 	background-color: #f8f9fa!important;
+	float: left;
+}
+.mg-l-50{
+	margin-left: 50px;
+}
+.mg-t-50{
+	margin-top: 50px;
+}
+.left-detail{
+	width: 810px;
+	height: 600px;
+	float: left;
+}
+.right-detail{
+	float:right;
+	width: 620px;
+	height: 600px;
+}
+.button1 {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: black;
+  border: none;
+  color: rgb(64, 252, 211);
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 300px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
 
+.button1 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button1 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button1:hover span {
+  padding-right: 25px;
+}
+
+.button1:hover span:after {
+  opacity: 1;
+  right: 0;
 }
