--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+	width: 1440px;
+}
 .header {
 	height: 70px;
 }
@@ -27,8 +30,8 @@
 	font-size: 20px;
 }
 .left-main{
-	width: 650px;
-	height: 600px;
+	width: 680px;
+	height: 900px;
 }
 .left-image {
 	width: 300px;
@@ -37,9 +40,15 @@
     margin-left: 80px;
 
 }
+.justify-content {
+	justify-content: center;
+    margin-left: 110px;
+    margin-top: 30px;
+
+}
 .right-main {
 	width: 750px;
-	height: 600px;
+	height: 900px;
 }
 .float-l {
 	float:left;
@@ -49,11 +58,15 @@
 }
 .img-product {
 	width: 200px;
-	height: 133.328px;
+	height: 200px;
 }
 .img-detail {
 	width: 700px;
 	height: 466.656px;
+}
+
+.media-img {
+	height: 796px;
 }
 
 .text3 {
@@ -125,4 +138,41 @@
 .button1:hover span:after {
   opacity: 1;
   right: 0;
+}
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
