--- a/templates/cate_info.html
+++ b/templates/cate_info.html
@@ -14,7 +14,7 @@
     <body>
         <header>
             <div class="header">
-                <p class="logo"><a style="text-decoration:none" href="file:///Users/ngocphucdo/Code/python/codegym/index.html">Nike Fanboy</a></p>
+                <p class="logo"><a style="text-decoration:none" href="http://127.0.0.1:5000/">Nike Fanboy</a></p>
             </div>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
